# Wanderlust-AI

./: main.py  pyproject.toml  requirements.txt
backend/: config.py  generate_train_data.py  main.py  merge_data.py
backend/data/: ml_training_data.csv  ml_training_data_final.csv  travel_recommendation_training_data.csv  travel_recommendation_training_data_batch2.csv  travel_recommendation_training_data_batch3.csv  travel_recommendation_training_data_batch4.csv  travel_recommendation_training_data_batch5.csv
backend/db/: connection.py  models.py  schema.sql  seed.py
backend/ml/: feature_columns.pkl  label_encoders.pkl  recommendation_model.pkl
backend/routes/: destinations.py  events.py  feedback.py  heatmap.py  history.py  map.py  offroad.py  treks.py  users.py  wishlist.py
data/: Travel info original.csv  events_data.json  india_local_festivals.json  offroad_data.json  treks_data.json  world_festivals_extra.json
notebooks/: train_model.ipynb
notebooks/.ipynb_checkpoints/: train_model-checkpoint.ipynb
